<resources>
    <string name="app_name">SchoolTools</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">New User? Register Here</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="registration">Register</string>
    <string name="studentList">Student List</string>
    <string name="parentList">Parent List</string>
    <string name="classList">Class List</string>
    <string name="addStudent">Add Student</string>
    <string name="parentEmail">Parent Email</string>
    <string name="addUpdateStudent">Add/Update Student</string>
    <string name="addParent">Add Parent</string>
    <string name="parentName">Parent Name</string>
    <string name="streetAddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipCode">Zip Code</string>
    <string name="phone">Phone</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="pEmail">Email</string>
</resources>
