<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddParentActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etStreet"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/streetAddress"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etCity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etState"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etPostalCode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/zipCode"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/pEmail"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnAddParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Parent"/>



</LinearLayout>