<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvStudentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/studentList"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/tvParentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parentList"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/classList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classList"
        android:textSize="50dp" />

</LinearLayout>